--- a/index.html
+++ b/index.html
@@ -1,51 +1,40 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Microsoft Website</title>
-  <link rel="stylesheet" href="main.css">
-</head>
-<body>
-
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Microsoft Website</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
     <h1>HoliStay</h1>
 
+    <!--Menu-->
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#findyourstay">Find your Stay</a>
+      <a href="#featauredstays">Featured Stays</a>
+      <a href="#staystyles">Stay Styles</a>
+      <a href="#mystays">My Stays</a>
+    </div>
 
-<!--Menu-->
- <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#findyourstay">Find your Stay</a>
-  <a href="#featauredstays">Featured Stays</a>
-  <a href="#staystyles">Stay Styles</a>
-  <a href="#mystays">My Stays</a>
-</div>
+    <!--Dropdown1-->
 
+    <div class="dropdown" style="right: 0">
+      <button class="dropbtn">No. of People</button>
+      <div class="dropdown-content" style="right: 0">
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">6+</a>
+      </div>
+    </div>
 
+    <p>Find your Stay</p>
+    <p>Hello</p>
 
-
-<!--Dropdown1-->
-
-
-<div class="dropdown" style="right:0">
-  <button class="dropbtn">No. of People</button>
-  <div class="dropdown-content" style="right:0">
-  
-    <a href="#">2</a>
-    <a href="#">3</a>
-    <a href="#">4</a>
-    <a href="#">5</a>
-    <a href="#">6+</a>
-  </div>
-</div>
-
-<p> Find your Stay</p>
-
-
-
-	
-<script src="app.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
