--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!--Dropdown1-->
 
-    <div class="dropdown" style="right: 0">
+    <div class="dropdownOne" style="right: 0">
       <button class="dropbtn">No. of People</button>
       <div class="dropdown-content" style="right: 0">
         <a href="#">2</a>
@@ -32,8 +32,18 @@
       </div>
     </div>
 
+    <div class="dropdownTwo" style="right: 0">
+      <button class="dropbtn">Where are you Staying?</button>
+      <div class="dropdown-content" style="right: 0">
+        <a href="#">Belfast</a>
+        <a href="#">Portrush</a>
+        <a href="#">Galway</a>
+        <a href="#">Dublin</a>
+        <a href="#">Other</a>
+      </div>
+    </div>
+
     <p>Find your Stay</p>
-    <p>Hello</p>
 
     <script src="app.js"></script>
   </body>
