--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
       <a href="#mystays">My Stays</a>
     </div>
 
+    <!--Slider-->
+    <div class="slidecontainer">
+      <input
+        type="range"
+        min="1"
+        max="100"
+        value="50"
+        class="slider"
+        id="myRange"
+      />
+    </div>
+
     <!--Dropdown1-->
 
     <div class="dropdownOne" style="right: 0">
