--- a/index.html
+++ b/index.html
@@ -19,21 +19,9 @@
       <a href="#mystays">My Stays</a>
     </div>
 
-    <!--Slider-->
-    <div class="slidecontainer">
-      <input
-        type="range"
-        min="1"
-        max="100"
-        value="50"
-        class="slider"
-        id="myRange"
-      />
-    </div>
-
     <!--Dropdown1-->
 
-    <div class="dropdownOne" style="right: 0">
+    <div class="dropdown" style="right: 0">
       <button class="dropbtn">No. of People</button>
       <div class="dropdown-content" style="right: 0">
         <a href="#">2</a>
@@ -44,15 +32,16 @@
       </div>
     </div>
 
-    <div class="dropdownTwo" style="right: 0">
-      <button class="dropbtn">Where are you Staying?</button>
-      <div class="dropdown-content" style="right: 0">
-        <a href="#">Belfast</a>
-        <a href="#">Portrush</a>
-        <a href="#">Galway</a>
-        <a href="#">Dublin</a>
-        <a href="#">Other</a>
-      </div>
+    <!--Slider-->
+    <div class="slidecontainer">
+      <input
+        type="range"
+        min="1"
+        max="100"
+        value="50"
+        class="slider"
+        id="myRange"
+      />
     </div>
 
     <p>Find your Stay</p>
