--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
     <div class="slidecontainer">
       <input
         type="range"
-        min="1"
-        max="100"
-        value="50"
+        min="100"
+        max="300"
+        value="200"
         class="slider"
-        id="myRange"
+        id="Price"
+        name="Price"
+        step="10"
+        <label for="Price"> Price</label>
       />
     </div>
 
