--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
       </div>
     </div>
 
-    <!--Slider-->
-    <div class="slidecontainer">
-      <input
-        type="range"
-        min="100"
-        max="300"
-        value="200"
-        class="slider"
-        id="Price"
-        name="Price"
-        step="10"
-      />
+    <div style="position: relative; margin: auto; width: 90%">
+      <span
+        style="
+          position: absolute;
+          color: red;
+          border: 1px solid blue;
+          min-width: 100px;
+        "
+      >
+        <span id="myValue"></span>
+      </span>
+      <input type="range" id="myRange" max="1000" min="0" style="width: 80%" />
     </div>
 
     <p>Find your Stay</p>
