--- a/index.html
+++ b/index.html
@@ -33,18 +33,42 @@
     </div>
 
     <!--Slider-->
-    <div class="slidecontainer">
-      <input
-        type="range"
-        min="100"
-        max="300"
-        value="200"
-        class="slider"
-        id="Price"
-        name="Price"
-        step="10"
-      />
+    <div style="position: relative; margin: auto; width: 90%">
+      <span
+        style="
+          position: absolute;
+          color: red;
+          border: 1px solid blue;
+          min-width: 100px;
+        "
+      >
+        <span id="myValue"></span>
+      </span>
+      <input type="range" id="myRange" max="1000" min="0" style="width: 80%" />
     </div>
+
+    <script type="text/javascript" charset="utf-8">
+      var myRange = document.querySelector("#myRange");
+      var myValue = document.querySelector("#myValue");
+      var myUnits = "myUnits";
+      var off =
+        myRange.offsetWidth / (parseInt(myRange.max) - parseInt(myRange.min));
+      var px =
+        (myRange.valueAsNumber - parseInt(myRange.min)) * off -
+        myValue.offsetParent.offsetWidth / 2;
+
+      myValue.parentElement.style.left = px + "px";
+      myValue.parentElement.style.top = myRange.offsetHeight + "px";
+      myValue.innerHTML = myRange.value + " " + myUnits;
+
+      myRange.oninput = function () {
+        let px =
+          (myRange.valueAsNumber - parseInt(myRange.min)) * off -
+          myValue.offsetWidth / 2;
+        myValue.innerHTML = myRange.value + " " + myUnits;
+        myValue.parentElement.style.left = px + "px";
+      };
+    </script>
 
     <p>Find your Stay</p>
 
