--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </div>
 
     <!--Slider-->
-    <div style="position: relative; margin: auto; width: 90%">
+    <div style="position: relative; margin: auto; width: 40%; float: right">
       <span
         style="
           position: absolute;
-          color: red;
-          border: 1px solid blue;
+          color: 04aa6d;
+          border: 1px solid black;
           min-width: 100px;
         "
       >
