--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script type="text/javascript" charset="utf-8">
       var myRange = document.querySelector("#myRange");
       var myValue = document.querySelector("#myValue");
-      var myUnits = "myUnits";
+      var myUnits = "Pounds";
       var off =
         myRange.offsetWidth / (parseInt(myRange.max) - parseInt(myRange.min));
       var px =
