--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
       >
         <span id="myValue"></span>
       </span>
-      <input type="range" id="myRange" max="1000" min="0" style="width: 80%" />
+      <input
+        type="range"
+        id="myRange"
+        max="500+"
+        min="150"
+        style="width: 80%"
+      />
     </div>
 
     <script type="text/javascript" charset="utf-8">
