--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           color: 04aa6d;
           border: 1px solid black;
           min-width: 100px;
+          font-style: oblique;
         "
       >
         <span id="myValue"></span>
