--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Menu-->
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="#findyourstay">Find your Stay</a>
+      <a href="#FindYourStay">Find your Stay</a>
       <a href="#featauredstays">Featured Stays</a>
       <a href="#staystyles">Stay Styles</a>
       <a href="#mystays">My Stays</a>
