--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="#FindYourStay">Find your Stay</a>
-      <a href="#featauredstays">Featured Stays</a>
-      <a href="#staystyles">Stay Styles</a>
-      <a href="#mystays">My Stays</a>
+      <a href="#FeatauredStays">Featured Stays</a>
+      <a href="#StayStyles">Stay Styles</a>
+      <a href="#MyStays">My Stays</a>
     </div>
 
     <!--Dropdown1-->
