--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <!--Menu-->
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="#FindYourStay">Find your Stay</a>
-      <a href="#FeatauredStays">Featured Stays</a>
-      <a href="#StayStyles">Stay Styles</a>
-      <a href="#MyStays">My Stays</a>
+      <a href="#FindYourStay.html">Find your Stay</a>
+      <a href="#FeatauredStays.html">Featured Stays</a>
+      <a href="#StayStyles.html">Stay Styles</a>
+      <a href="#MyStays.html">My Stays</a>
     </div>
 
     <!--Dropdown1-->
