--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Microsoft Website</title>
+    <title>Holistays</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -13,10 +13,10 @@
     <!--Menu-->
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="/coursework2/FindYourStay.html">Find your Stay</a>
-      <a href="/coursework2/FeatauredStays.html">Featured Stays</a>
-      <a href="/coursework2/StayStyles.html">Stay Styles</a>
-      <a href="/coursework2/MyStays.html">My Stays</a>
+      <a href="../coursework2/FindYourStay.html">Find your Stay</a>
+      <a href="../coursework2/FeatauredStays.html">Featured Stays</a>
+      <a href="../coursework2/StayStyles.html">Stay Styles</a>
+      <a href="../coursework2/MyStays.html">My Stays</a>
     </div>
 
     <!--Dropdown1-->
