--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -7,6 +7,13 @@
     <title>Find your stay</title>
   </head>
   <body>
-    <p>Hello</p>
+    <!--Menu-->
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="../coursework2/FindYourStay.html">Find your Stay</a>
+      <a href="../coursework2/FeatauredStays.html">Featured Stays</a>
+      <a href="../coursework2/StayStyles.html">Stay Styles</a>
+      <a href="../coursework2/MyStays.html">My Stays</a>
+    </div>
   </body>
 </html>
