--- a/FeaturedStays.html
+++ b/FeaturedStays.html
@@ -10,7 +10,7 @@
   <body>
     <!--Menu-->
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
+      <a href="../coursework2/index.html">Home</a>
       <a href="../coursework2/FindYourStay.html">Find your Stay</a>
       <a href="../coursework2/FeatauredStays.html">Featured Stays</a>
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
