--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--Menu-->
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
+      <a href="../coursework2/index.html">Home</a>
       <a href="../coursework2/FindYourStay.html">Find your Stay</a>
       <a href="../coursework2/FeatauredStays.html">Featured Stays</a>
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
