--- a/StayStyles.html
+++ b/StayStyles.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="main.css" /></title>
   </head>
   <body>
+    <h1>HoliStay</h1>
     <!--Menu-->
     <div class="topnav">
       <a href="../coursework2/index.html">Home</a>
