--- a/MyStays.html
+++ b/MyStays.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
     <h1>HoliStay</h1>
     <!--Menu-->
     <div class="topnav">
