--- a/index.html
+++ b/index.html
@@ -28,8 +28,38 @@
       <a href="../coursework2/MyStays.html">My Stays</a>
     </div>
 
+    <form action="form" action="/my-handling-form-page" method="post">
+      <ul>
+        <li>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="user_name" />
+        </li>
+        <li>
+          <label for="mail">E-mail:</label>
+          <input type="email" id="mail" name="user_email" />
+        </li>
+        <li>
+          <label for="msg">Message:</label>
+          <textarea id="msg" name="user_message"></textarea>
+        </li>
+      </ul>
+      <h4>
+        Check-in Date :
+        <input type="datetime-local" id="Test_DatetimeLocal" />
+      </h4>
+
+      <h4>
+        Check-out Date :
+        <input type="datetime-local" id="Test_DatetimeLocal" />
+      </h4>
+      <li class="button">
+        <button type="submit">Send your message</button>
+      </li>
+    </form>
+
     <!--Dropdown1-->
 
+    <br />
     <div class="dropdown" style="right: 0">
       <button class="dropbtn">No. of People</button>
       <div class="dropdown-content" style="right: 0">
@@ -38,6 +68,19 @@
         <a href="#">4</a>
         <a href="#">5</a>
         <a href="#">6+</a>
+      </div>
+    </div>
+
+    <!--Dropdown2-->
+
+    <div class="dropdown" style="right: 0">
+      <button class="dropbtn">No. of nights</button>
+      <div class="dropdown-content" style="right: 0">
+        <a href="#">Belfast</a>
+        <a href="#">Dublin</a>
+        <a href="#">Portrush</a>
+        <a href="#">Galway</a>
+        <a href="#"></a>
       </div>
     </div>
 
