--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
     <h1>HoliStay</h1>
 
-    <!--Menu-->
+    <!--NavBar-->
     <div class="topnav">
       <a href="../coursework2/index.html">Home</a>
       <a href="../coursework2/FindYourStay.html">Find your Stay</a>
@@ -40,51 +40,6 @@
       </select>
       <button id="formButton" type="button">Submit Your Stay</button>
     </form>
-
-    <!--Dropdown1-->
-
-    <br />
-    <div class="dropdown" style="right: 0">
-      <button class="dropbtn">No. of People</button>
-      <div class="dropdown-content" style="right: 0">
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
-        <a href="#">5</a>
-        <a href="#">6+</a>
-      </div>
-    </div>
-
-    <!--Dropdown2-->
-
-    <div class="dropdown" style="right: 0">
-      <button class="dropbtn">No. of nights</button>
-      <div class="dropdown-content" style="right: 0">
-        <a href="#">Belfast</a>
-        <a href="#">Dublin</a>
-        <a href="#">Portrush</a>
-        <a href="#">Galway</a>
-        <a href="#"></a>
-      </div>
-    </div>
-
-    <!--Slider-->
-    <div style="position: relative; margin: auto; width: 40%; float: right">
-      <span
-        style="
-          position: absolute;
-          color: 04aa6d;
-          border: 1px solid black;
-          min-width: 100px;
-          font-style: oblique;
-        "
-      >
-        <span id="myValue"></span>
-      </span>
-      <input type="range" id="myRange" max="500" min="0" style="width: 80%" />
-    </div>
-
-    <p>Find your Stay</p>
 
     <script src="./app.js"></script>
   </body>
