Added JS to featured stays with Anna and Rebecca

--- a/FeaturedStays.html
+++ b/FeaturedStays.html
@@ -7,6 +7,7 @@
     <title>Featured Stays</title>
     <link rel="stylesheet" href="main.css" />
   </head>
+
   <body>
     <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
     <h1>HoliStay</h1>
@@ -18,5 +19,7 @@
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
       <a href="../coursework2/MyStays.html">My Stays</a>
     </div>
+
+    <script src="js/featuredstays.js"></script>
   </body>
 </html>
