--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       <button id="formButton" type="button">Submit Your Stay</button>
     </form>
 
-    <script src="./app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
