--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  
+    
     <title>Find your stay</title>
     <link rel="stylesheet" href="main.css" />
   </head>
@@ -14,9 +22,11 @@
     <div class="topnav">
       <a href="../coursework2/index.html">Home</a>
       <a href="../coursework2/FindYourStay.html">Find your Stay</a>
-      <a href="../coursework2/FeatauredStays.html">Featured Stays</a>
+      <a href="../coursework2/FeaturedStays.html">Featured Stays</a>
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
       <a href="../coursework2/MyStays.html">My Stays</a>
+      <a href="../coursework2/Account.html">Account</a>
     </div>
+    <script src="js/app.js"></script>
   </body>
 </html>
