--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-    />
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Holistays</title>
@@ -22,24 +21,33 @@
     <div class="topnav">
       <a href="../coursework2/index.html">Home</a>
       <a href="../coursework2/FindYourStay.html">Find your Stay</a>
-      <a href="../coursework2/FeatauredStays.html">Featured Stays</a>
+      <a href="../coursework2/FeaturedStays.html">Featured Stays</a>
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
       <a href="../coursework2/MyStays.html">My Stays</a>
+      <a href="../coursework2/Account.html">Account</a>
     </div>
 
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-6">
     <form>
       <label for="checkIn"> Check-in Date :</label>
       <input type="date" id="checkIn" />
+      <br>
       <label for="checkOut">Check-out Date :</label>
       <input type="date" id="checkOut" />
+      <br>
       <label for="noOfPeople">Number of People</label>
-      <select id="noOfPeople" name="noOfPeople">
+      <select id="noOfPeople" name="noOfPeople">  
         <option value="1">One</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
       </select>
+      <br>
       <button id="formButton" type="button">Submit Your Stay</button>
     </form>
+  </div>
+  <div class="col-sm-3"></div>
 
     <script src="js/app.js"></script>
   </body>
