--- a/Account.html
+++ b/Account.html
@@ -47,13 +47,16 @@
                 <label for="password">Confirm Password: </label>
                 <input id="password" name="password">
                 <br>
-                <button> Submit </button>
+                <button id="accountButton" type="button"> Submit </button>
             </form>
         </div>
         <div class="col-sm-3"></div>
       </div>
 
-
-    <script src="js/app.js"></script>
+      <div class="footer">
+        <p>Contact us: 098765432 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HoliStayie@gmail.com </p>
+      </div>
+      
+    <script src="js/account.js"></script>
 </body>
 </html>
