--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="row">
       <div class="col-sm-3"></div>
       <div class="col-sm-6">
+        <h2> Find your perfect stay in Ireland </h2>
     <form>
       <label for="checkIn"> Check-in Date :</label>
       <input type="date" id="checkIn" />
@@ -48,7 +49,9 @@
     </form>
   </div>
   <div class="col-sm-3"></div>
-
+  <div class="footer">
+    <p>Contact us: 098765432 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HoliStayie@gmail.com </p>
+  </div>
     <script src="js/app.js"></script>
   </body>
 </html>
