added js file and changed form landing page

--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -27,6 +27,6 @@
       <a href="../coursework2/MyStays.html">My Stays</a>
       <a href="../coursework2/Account.html">Account</a>
     </div>
-    <script src="js/app.js"></script>
+    <script src="js/findyourstay.js"></script>
   </body>
 </html>
