added price option to form homepage

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         <option value="2">Two</option>
         <option value="3">Three</option>
       </select>
+      <label for="price">Price Range</label>
+      <select id="price" name="price">  
+        <option value="100">£100</option>
+        <option value="200">£200</option>
+        <option value="300">£300</option>
+      </select>
       <br>
       <button id="formButton" type="button">Submit Your Stay</button>
     </form>
