added stay style option to form

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
         <option value="200">£200</option>
         <option value="300">£300</option>
       </select>
+      <label for="style">Stay Style</label>
+      <select id="style" name="style">  
+        <option value="10">City</option>
+        <option value="20">Outdoor</option>
+        <option value="30">Both</option>
+      </select>
       <br>
       <button id="formButton" type="button">Submit Your Stay</button>
     </form>
