--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
     
     <title>Find your stay</title>
     <link rel="stylesheet" href="main.css" />
@@ -26,7 +21,8 @@
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
       <a href="../coursework2/MyStays.html">My Stays</a>
       <a href="../coursework2/Account.html">Account</a>
-    </div>
+    </div> 
+
     <script src="js/findyourstay.js"></script>
   </body>
 </html>
