--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
     <title>Holistays</title>
     
     <link rel="stylesheet" href="main.css" />
@@ -53,9 +57,9 @@
       </select>
       <label for="style">Stay Style</label>
       <select id="style" name="style">  
-        <option value="10">City</option>
-        <option value="20">Outdoor</option>
-        <option value="30">Both</option>
+        <option value="10">City Break</option>
+        <option value="20">Outdoor Adventure</option>
+        <option value="30">Bit of Both</option>
       </select>
       <br>
       <button id="formButton" type="button">Submit Your Stay</button>
