--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    
     <title>Find your stay</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/findyourstay.css" />
   </head>
   <body>
     <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
@@ -21,8 +24,20 @@
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
       <a href="../coursework2/MyStays.html">My Stays</a>
       <a href="../coursework2/Account.html">Account</a>
-    </div> 
+    </div>
 
+    <div id="anything" class="row">
+      <!--
+        can add pictures in here for locations etc.
+      -->
+    </div>
+
+    <div class="footer">
+      <p>
+        Contact us: 098765432 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        HoliStayie@gmail.com
+      </p>
+    </div>
     <script src="js/findyourstay.js"></script>
   </body>
 </html>
