--- a/MyStays.html
+++ b/MyStays.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>My Styles</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
