--- a/StayStyles.html
+++ b/StayStyles.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Stay Styles</title>
-    <link rel="stylesheet" href="main.css" /></title>
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
@@ -23,7 +24,6 @@
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
       <a href="../coursework2/MyStays.html">My Stays</a>
       <a href="../coursework2/Account.html">Account</a>
-
     </div>
   </body>
 </html>
