--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>Holistays</title>
 
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
@@ -26,9 +26,10 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-3"></div>
+      <div class="col-sm-3"><h2> Find your perfect stay in Ireland </h2>
+      </div>
       <div class="col-sm-6">
-        <h2> Find your perfect stay in Ireland </h2>
+        
     <form>
       <label for="checkIn"> Check-in Date :</label>
       <input type="date" id="checkIn" />
