--- a/Account.html
+++ b/Account.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Holistays</title>
     <link rel="stylesheet" href="main.css" />
@@ -19,40 +22,46 @@
       <a href="../coursework2/FindYourStay.html">Find your Stay</a>
       <a href="../coursework2/FeaturedStays.html">Featured Stays</a>
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
-      <a href="../coursework2/MyStays.html">My Stays</a>
       <a href="../coursework2/Account.html">Account</a>
     </div>
 
-    <br>
+    <br />
     <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-6">
-            <form action="">
-                <label for="firstName">First Name: </label>
-                <input id="firstName" name="firstName">
-                <br>
-                <label for="lastName">Last Name: </label>
-                <input id="lastName" name="lastName">
-                <br>
-                <label for="email">Email Address: </label>
-                <input id="email" name="email">
-                <br>
-                <label for="password">Create Password: </label>
-                <input id="password" name="password">
-                <br>
-                <label for="password">Confirm Password: </label>
-                <input id="password" name="password">
-                <br>
-                <button id="accountButton" type="button"> Submit </button>
-            </form>
-        </div>
-        <div class="col-sm-3"></div>
+      <div class="col-sm-3"></div>
+      <div class="col-sm-6">
+        <form action="">
+          <label for="firstName">First Name: </label>
+          <input id="firstName" name="firstName" />
+          <br />
+          <label for="lastName">Last Name: </label>
+          <input id="lastName" name="lastName" />
+          <br />
+          <label for="email">Email Address: </label>
+          <input id="email" name="email" />
+          <br />
+          <label for="password">Create Password: </label>
+          <input id="password" name="password" />
+          <br />
+          <label for="password">Confirm Password: </label>
+          <input id="password" name="password" />
+          <br />
+          <button id="accountButton" type="button">Submit</button>
+        </form>
       </div>
+      <div class="col-sm-3"></div>
+    </div>
 
-      <div class="footer">
-        <p>Contact us: 098765432 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HoliStayie@gmail.com </p>
-      </div>
-      
+    <div class="col-sm-3"></div>
+
+    <div class="userAccount">User info</div>
+
+    <div class="footer">
+      <p>
+        Contact us: 098765432 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        HoliStayie@gmail.com
+      </p>
+    </div>
+
     <script src="js/account.js"></script>
-</body>
+  </body>
 </html>
