--- a/FeaturedStays.html
+++ b/FeaturedStays.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Featured Stays</title>
     <link rel="stylesheet" href="main.css" />
@@ -18,7 +21,6 @@
       <a href="../coursework2/FindYourStay.html">Find your Stay</a>
       <a href="../coursework2/FeaturedStays.html">Featured Stays</a>
       <a href="../coursework2/StayStyles.html">Stay Styles</a>
-      <a href="../coursework2/MyStays.html">My Stays</a>
       <a href="../coursework2/Account.html">Account</a>
     </div>
 
