added contect to stay styles page etc

--- a/Account.html
+++ b/Account.html
@@ -9,11 +9,11 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Holistays</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
-    <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
+    <img class="logo" src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
     <h1>HoliStay</h1>
 
     <!--NavBar-->
