--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/findyourstay.css" />
   </head>
   <body>
-    <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
+    <img class="logo" src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
     <h1>HoliStay</h1>
     <!--Menu-->
     <div class="topnav">
