--- a/StayStyles.html
+++ b/StayStyles.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/staystyles.css" />
   </head>
   <body>
-    <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
+    <img class="logo" src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
     <h1>HoliStay</h1>
     <!--Menu-->
     <div class="topnav">
@@ -23,19 +23,26 @@
 
     <div class="container mt-5">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4" id="colOne"> 
+          <div class="colOne"></div>
+          <br>
+          <img class="belfast2" src="./Images/belfast.jpg" alt="City Break">
           <h3>Column 1</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-4" id="colTwo"> 
+          <br>
+          <img class="cliff2" src="./Images/cliffs.jpg" alt="Outdoor Adventure">
           <h3>Column 2</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-4" id="colThree"> 
+          <br>
+          <img class="bitofboth2" src="./Images/bitofboth.jpg" alt="Bit of both">
           <h3>Column 3</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
