--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <img src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
+    <img class="logo" src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
     <h1>HoliStay</h1>
 
     <!--NavBar-->
@@ -41,13 +41,15 @@
         <option value="1">One</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
-      </select>
+      </select> 
+      <br>
       <label for="price">Price Range</label>
       <select id="price" name="price">  
         <option value="100">£100</option>
         <option value="200">£200</option>
         <option value="300">£300</option>
-      </select>
+      </select> 
+      <br>
       <label for="style">Stay Style</label>
       <select id="style" name="style">  
         <option value="10">City Break</option>
@@ -63,14 +65,13 @@
   <div class="col-sm-3"></div>
   <div class="row">
     <div class="col-sm-12">
-      <img id="belfast" src="./Images/belfast.jpg" class="img-thumbnail" alt="City Break">
-      <img id="cliff" src="./Images/cliffs.jpg" class="img-thumbnail" alt="Outdoor Adventure" id="cliff">
-      <img id="bitofboth" src="./Images/bitofboth.jpg" class="img-thumbnail" alt="Bit of both " id="bitofboth">
+      <img class="belfast" src="./Images/belfast.jpg" alt="City Break">
+      <img class="cliff" src="./Images/cliffs.jpg" alt="Outdoor Adventure">
+      <img class="bitofboth" src="./Images/bitofboth.jpg" alt="Bit of both">
           
     </div>
 
-
-      <div class="col-sm-3"></div>
+      <!-- <div class="col-sm-3"></div>
       <div class="row">
         <div class="col-sm-12">
           <img
@@ -93,13 +94,13 @@
             alt="Bit of both "
             id="bitofboth"
           />
-        </div>
+        </div> -->
 
         <div class="row">
           <div class="col-sm-12">
             City Break
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Outdoor
-            Adventure&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Outdoor
+            Adventure&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             A bit of Both
           </div>
         </div>
