linked city image to city break page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
   <div class="col-sm-3"></div>
   <div class="row">
     <div class="col-sm-12">
+      <a href="citybreaks.html">
       <img class="belfast" src="./Images/belfast.jpg" alt="City Break">
+    </a>
       <img class="cliff" src="./Images/cliffs.jpg" alt="Outdoor Adventure">
       <img class="bitofboth" src="./Images/bitofboth.jpg" alt="Bit of both">
           
