--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!--this meta tag allows for rednering for various mobile device screen sizes, and sets browser zoom limit -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/findyourstay.css" />
+  <title>Holistay IE</title>
 
-    <title>Find your stay</title>
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/findyourstay.css" />
   </head>
+  
   <body>
-    <img class="logo" src="../coursework2/Images/Logo.png" alt="Holistays Logo" />
-    <h1>HoliStay</h1>
-    <!--Menu-->
-    <div class="topnav">
-      <a href="../coursework2/index.html">Home</a>
-      <a href="../coursework2/FindYourStay.html">Find your Stay</a>
-      <a href="../coursework2/FeaturedStays.html">Featured Stays</a>
-      <a href="../coursework2/StayStyles.html">Stay Styles</a>
-      <a href="../coursework2/Account.html">Account</a>
-    </div>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a href="index.html" class="logo">
+            <img src="./Images/Logo.png" alt=""> 
+          </a>
+          <!--NavBar-->
+          <div class="topnav">
+            <a href="../coursework2/index.html">Home</a>
+            <a href="../coursework2/FindYourStay.html">Find your Stay</a>
+            <a href="../coursework2/FeaturedStays.html">Featured Stays</a>
+            <a href="../coursework2/StayStyles.html">Stay Styles</a>
+            <a href="../coursework2/Account.html">Account</a>
+          </div>
+        </nav>
+      </div>
+    </header>
 
     <div id="anything" class="row">
       <!--
