--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--this meta tag allows for rednering for various mobile device screen sizes, and sets browser zoom limit -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="./css/main.css" />
-  <link rel="stylesheet" href="./css/findyourstay.css" />
-  <title>Holistay IE</title>
-
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--this meta tag allows for rednering for various mobile device screen sizes, and sets browser zoom limit -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/findyourstay.css" />
+    <title>Holistay IE</title>
   </head>
-  
+
   <body>
     <header class="header">
       <div class="container">
         <nav class="nav">
           <a href="index.html" class="logo">
-            <img src="./Images/Logo.png" alt=""> 
+            <img src="./Images/Logo.png" alt="" />
           </a>
           <!--NavBar-->
           <div class="topnav">
@@ -31,11 +33,11 @@
       </div>
     </header>
 
-    <div id="anything" class="row">
+    <section id="anything" class="row">
       <!--
         can add pictures in here for locations etc.
       -->
-    </div>
+    </section>
 
     <div class="footer">
       <p>
