Changed font size

--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -33,11 +33,18 @@
       </div>
     </header>
 
-    <section id="anything" class="row">
+    <div class="row tile">
+    <div class="col-4 tile-img">
+      <p>Check-In Date</p>
+      <p>Check-Out Date</p>
+      </div>
+    <!-- <img class="armagh" src="./Images/armagh.jpg" alt="armagh"> </div>   -->
+    <section id="anything" class="row" col="col-8 tile-body">
       <!--
         can add pictures in here for locations etc.
       -->
     </section>
+  </div>
 
     <div class="footer">
       <p>
