--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
       /* line-height: 1; */
       text-shadow: 1px 1px 1rem rgba(0,0,0,0.5);
       text-align: center;
+      font-size: 3.5rem ;
       position: absolute;
       top: 50%;
       left: 50%;
       z-index: 1;
+  
+      
     }
+  
     </style>
 
 </head>
@@ -73,8 +77,8 @@
   <!--Banner with cliffs image background, link to featured stays page-->
   <div class="banner-image">
     <div class="banner-text">
-      <h1>Discover</h1>
-      <h2>Your Irish Staycation</h2>
+      <p>Discover</p>
+      <p>Your Irish Staycation</p>
       <a href="#" class="btn btn-gradient">Explore now</a>
     </div>
   </div>
