Dynamic rendering from the form

--- a/FeaturedStays.html
+++ b/FeaturedStays.html
@@ -7,11 +7,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/images.css" />
   <title>Holistay IE</title>
 
   </head>
 
-  <body>
+  <!-- <body> -->
     <header class="header">
       <div class="container">
         <nav class="nav">
@@ -30,6 +31,57 @@
       </div>
     </header>
 
+    <br>
+    <br>
+    <br>
+    <body>
+    <h1>Special Offers</h1>
+    <br>
+    <div class="row tile">
+        <div class="col-4 tile-img">
+        <img class="armagh" src="./Images/armagh.jpg" alt="armagh"> </div>  
+        <div class="col-8 tile-body">
+            <h2>Armagh</h2>
+            <p> Stay: Armagh city hotel</p>
+            <p>Price: £99 per night</p>
+            <button>Book now</button>
+        </div>
+    </div>
+
+    <br>
+    <div class="row tile">
+        <div class="col-4 tile-img">
+        <img class="galway" src="./Images/galway.jpg" alt="galway"></div>
+        <div class="col-8 tile-body">
+            <h2>Galway</h2>
+            <p> Stay: The Galmount Hotel and Spa</p>
+            <p>Price: £149 per night</p>
+            <button>Book now</button>
+        </div>
+    </div>
+
+    <br>
+    <div class="row tile">
+        <div class="col-4 tile-img">
+        <img class="dublin" src="./Images/dublin.jpg" alt="dublin"></div>
+        <div class="col-8 tile-body">
+            <h2>Dublin</h2>
+            <p> Stay: Dublin Skylon</p>
+            <p>Price: £239 per night </p>
+            <button>Book now</button>
+           
+        </div>
+    </div>       
+    </div>
+
+    
+    <div class="col-sm-3">
+        <p>Armagh 
+        Stay: Armagh city hotel
+        Price: £99 per night
+        </p>>
+
+    </div>
     <script src="js/featuredstays.js"></script>
   </body>
 </html>
