--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/findyourstay.css" />
+    <link rel="stylesheet" href="./css/images.css" />
     <title>Holistay IE</title>
   </head>
 
@@ -33,18 +34,11 @@
       </div>
     </header>
 
-    <div class="row tile">
-    <div class="col-4 tile-img">
-      <p>Check-In Date</p>
-      <p>Check-Out Date</p>
-      </div>
-    <!-- <img class="armagh" src="./Images/armagh.jpg" alt="armagh"> </div>   -->
-    <section id="anything" class="row" col="col-8 tile-body">
-      <!--
-        can add pictures in here for locations etc.
-      -->
-    </section>
-  </div>
+    <div class="find-your-stay-container">
+      <div id="data-container"></div>
+    </div>
+
+    <section id="anything" class="row" col="col-8 tile-body"></section>
 
     <div class="footer">
       <p>
