--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/images.css" />
   <title>Holistay IE</title>
 
   <style>
@@ -18,11 +19,12 @@
       background-image: url("./Images/cliffs.jpg");
       height: 100vh;
       width: 100%;
-      background-position: center;
+      background-position: left;
       background-repeat: no-repeat;
       background-size: cover;
       position: relative;
       z-index: 0;
+     
     }
 
     .banner-image::before{
@@ -46,6 +48,7 @@
       top: 50%;
       left: 50%;
       z-index: 1;
+      align-items: center;
   
       
     }
@@ -79,7 +82,7 @@
     <div class="banner-text">
       <p>Discover</p>
       <p>Your Irish Staycation</p>
-      <a href="#" class="btn btn-gradient">Explore now</a>
+      <a href="../coursework2/FeaturedStays.html" class="btn btn-gradient">Explore now</a>
     </div>
   </div>
   <!-- <div class="banner"> 
@@ -106,9 +109,9 @@
         <div class="input-group">
           <label for="stay-style" class="input-label">Stay Style</label>
           <select class="options" id="stay-style" required>
-              <option value="city">City Break</option>
-              <option value="outdoor">Outdoor Adventure</option>
-              <option value="both">Bit of Both</option>
+              <option value="City Break">City Break</option>
+              <option value="Outdoor Adventure">Outdoor Adventure</option>
+              <option value="Bit of Both">Bit of Both</option>
           </select>
         </div>
         <div class="input-group">
