--- a/StayStyles.html
+++ b/StayStyles.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./css/staystyles.css" />
   <title>Holistay IE</title>
 
+
   </head>
 
   <body>
@@ -30,14 +31,15 @@
         </nav>
       </div>
     </header> 
-
+<br>
+<br>
     <div class="container mt-5">
       <div class="row">
         <div class="col-sm-4" id="colOne"> 
           <div class="colOne"></div>
           <br>
           <img class="belfast2" src="./Images/belfast.jpg" alt="City Break">
-          <h3>Column 1</h3>
+          <h3>City Breaks</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
         </div>
@@ -45,7 +47,7 @@
         <div class="col-sm-4" id="colTwo"> 
           <br>
           <img class="cliff2" src="./Images/cliffs.jpg" alt="Outdoor Adventure">
-          <h3>Column 2</h3>
+          <h3>Outdoor Adventure</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
         </div>
@@ -53,7 +55,7 @@
         <div class="col-sm-4" id="colThree"> 
           <br>
           <img class="bitofboth2" src="./Images/bitofboth.jpg" alt="Bit of both">
-          <h3>Column 3</h3>
+          <h3>Bit of Both</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
         </div>
