fixed form validation still have to fix button

--- a/index.html
+++ b/index.html
@@ -200,16 +200,18 @@
           test test test test test test test test test test test test
         </div>
       </div>
-      <div class="socialmedia-wrap">
+      <!-- <div class="socialmedia-wrap"> -->
         <h4 class="footer-heading">Follow us</h4>
-          <div class="socialmedia">
-            <a href="#" class="sm-link"> <i class="fab fa-facebook-square"></i> </a>
-            <a href="#" class="sm-link"> <i class="fab fa-instagram"></i> </a>
-            <a href="#" class="sm-link"> <i class="fab fa-tripadvisor"></i> </a>
-          </div>
+            <div class="socialmedia">
+              <a href="#" class="sm-link"> <i class="fab fa-facebook-square"></i> </a>
+              <a href="#" class="sm-link"> <i class="fab fa-instagram"></i> </a>
+              <a href="#" class="sm-link"> <i class="fab fa-tripadvisor"></i> </a>
+          
+           </div>
+        <!-- </div> -->
       </div>
-    </div>
   </div>
+
 </footer>
 
 <script src="js/app.js"></script>
