added pop-up to holiday listings button

--- a/FeaturedStays.html
+++ b/FeaturedStays.html
@@ -8,11 +8,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="./css/images.css" />
+  <link rel="stylesheet" href="./css/featuredstays.css" />
   <title>Holistay IE</title>
 
   </head>
 
-  <!-- <body> -->
+  <body>
     <header class="header">
       <div class="container">
         <nav class="nav">
@@ -34,7 +35,9 @@
     <br>
     <br>
     <br>
-    <body>
+    <!-- <body> -->
+    <br/>
+    <br/>
     <h1>Special Offers</h1>
     <br>
     <div class="row tile">
