--- a/Account.html
+++ b/Account.html
@@ -36,7 +36,7 @@
     <br>
     <div class="row">
       <div class="col-sm-3"></div>
-      <div class="col-sm-6"> -->
+      <div class="col-sm-6"> 
 
     <br>
     <br>
