--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -36,34 +36,45 @@
 
     <div class="find-your-stay-container">
       <div id="data-container"></div>
+    </div> 
+
+      <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+  <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Congratulations! Your HoliStay has been booked!</p>
+      </div>
+
     </div>
 
-    <button
+    <!-- <button
       type="button"
       class="btn btn-primary"
       data-toggle="modal"
       data-target="#myModal"
     >
       Open modal
-    </button>
+    </button> -->
 
     <!-- The Modal -->
-    <div class="modal" id="myModal">
+    <!-- <div class="modal" id="myModal">
       <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content"> -->
           <!-- Modal Header -->
-          <div class="modal-header">
+          <!-- <div class="modal-header">
             <h4 class="modal-title">Modal Heading</h4>
             <button type="button" class="close" data-dismiss="modal">
               &times;
             </button>
-          </div>
+          </div> -->
 
           <!-- Modal body -->
-          <div class="modal-body">Modal body..</div>
+          <!-- <div class="modal-body">Modal body..</div> -->
 
           <!-- Modal footer -->
-          <div class="modal-footer">
+          <!-- <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">
               Close
             </button>
@@ -71,7 +82,7 @@
         </div>
       </div>
     </div>
-    <section id="anything" class="row" col="col-8 tile-body"></section>
+    <section id="anything" class="row" col="col-8 tile-body"></section> -->
 
     <footer class="footer">
       <div class="container">
