updted buttons styles to match theme, added some titles, just css stuff

--- a/Account.html
+++ b/Account.html
@@ -110,7 +110,7 @@
           
         </div> 
       
-        <button class="accountButton" >Submit</button>
+        <button class="accountButton btn btn-green" >Submit</button>
 
         <!-- The Modal -->
         <div class="modal" id="myModal">
