--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -32,7 +32,13 @@
           </div>
         </nav>
       </div>
-    </header>
+    </header> 
+
+    <div class="container"> 
+      <h5 class="page-head">
+        <span class="heading">Find Your Stay</span>
+      </h5>
+    </div>
 
     <div class="find-your-stay-container">
       <div id="data-container"></div>
