--- a/FeaturedStays.html
+++ b/FeaturedStays.html
@@ -13,7 +13,7 @@
 
   </head>
 
-  <body>
+<body>
     <header class="header">
       <div class="container">
         <nav class="nav">
@@ -35,55 +35,59 @@
     <br>
     <br>
     <br>
-    <!-- <body> -->
+  <body>
     <br/>
     <br/>
-    <h1>Special Offers</h1>
-    <br>
-    <div class="row tile">
+    <h5 class="section-head">
+      <span class="heading">Featured Stays</span>
+      <span class="sub-heading">Discover Great Deals</span>
+    </h5>
+    <!-- <h1>Special Offers</h1> -->
+    <!-- <br> -->
+    <div class="row-tile">
         <div class="col-4 tile-img">
         <img class="armagh" src="./Images/armagh.jpg" alt="armagh"> </div>  
         <div class="col-8 tile-body">
             <h2>Armagh</h2>
             <p> Stay: Armagh city hotel</p>
             <p>Price: £99 per night</p>
-            <button>Book now</button>
+            <button type="button" class="btn btn-gradient">  Book now</button>
         </div>
     </div>
 
     <br>
-    <div class="row tile">
+    <div class="row-tile">
         <div class="col-4 tile-img">
         <img class="galway" src="./Images/galway.jpg" alt="galway"></div>
         <div class="col-8 tile-body">
             <h2>Galway</h2>
             <p> Stay: The Galmount Hotel and Spa</p>
             <p>Price: £149 per night</p>
-            <button>Book now</button>
+            <button type="button" class="btn btn-gradient">  Book now</button>
         </div>
     </div>
 
     <br>
-    <div class="row tile">
+    <div class="row-tile">
         <div class="col-4 tile-img">
         <img class="dublin" src="./Images/dublin.jpg" alt="dublin"></div>
         <div class="col-8 tile-body">
             <h2>Dublin</h2>
             <p> Stay: Dublin Skylon</p>
             <p>Price: £239 per night </p>
-            <button>Book now</button>
+            <button type="button" class="btn btn-gradient">  Book now</button>
            
         </div>
     </div>       
     </div>
-
+  </body>
     
-    <div class="col-sm-3">
+    <!-- <div class="col-sm-3">
         <p>Armagh 
         Stay: Armagh city hotel
         Price: £99 per night
         </p>>
-    </div>
+    </div> -->
 
     <footer class="footer">
       <div class="container">
@@ -108,5 +112,5 @@
       </div>
     </footer>
     <script src="js/featuredstays.js"></script>
-  </body>
+  
 </html>
