created outdoor adventure and bit of both page and linked to home page button, fixed alignment on featured and find ur stays and updated footer

--- a/StayStyles.html
+++ b/StayStyles.html
@@ -41,11 +41,11 @@
           <br />
           <img class="belfast2" src="./Images/belfast.jpg" alt="City Break" />
           <h3>City Breaks</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+          <p>Belfast city breaks bring with them the promise of lively nightlife, historical and cultural gems, and a thriving food scene.</p>
           <p>
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris...
+            Enjoy the colourful Celtic nightlife among the lively crowds in Temple Bar
           </p>
+          <p>Looking for a weekend away traversing the charming cobblestone streets of Galway?</p>
         </div>
 
         <div class="col-sm-4" id="colTwo">
@@ -56,11 +56,9 @@
             alt="Outdoor Adventure"
           />
           <h3>Outdoor Adventure</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-          <p>
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris...
-          </p>
+          <p>Climb the highest mountain, Carrauntoohil, County Kerry</p>
+          <p>Go Skydiving in Edenderry, Co. Offaly </p>
+          <p>Delphi Resort is Ireland's leading adventure resort with a 4 star hotel, hostel, spa and up to 20 outdoor activities </p>
         </div>
 
         <div class="col-sm-4" id="colThree">
@@ -71,10 +69,10 @@
             alt="Bit of both"
           />
           <h3>Bit of Both</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-          <p>
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris...
+          <p>Enjoy the buzz in Galway city and the beautiful Salthill beach</p>
+          <p>Cruise the River Shannon, Midlands</p>
+          <p>Kilkenny is one of Ireland's most cosmopolitan cities, with many festivals, eateries and creative people resulting in an electric atmosphere
+            and also explore the castle in the medieval town
           </p>
         </div>
       </div>
@@ -91,7 +89,8 @@
               <img class="logo-image" src="./images/Logo.png" alt="" />
             </a>
             <div class="paragraph-footer">
-              test test test test test test test test test test test test
+             Contact us:   
+             <div>Email: HoliStayie@gmail.com     Telephone: 02830123467 </div>
             </div>
           </div>
           <div class="socialmedia-wrap">
