--- a/bitofBoth.html
+++ b/bitofBoth.html
@@ -39,16 +39,16 @@
     <br/>
     <br/>
     <h5 class="section-head">
-      <span class="heading">City Breaks</span>
+      <span class="heading">Bit of Both</span>
       <span class="sub-heading">Some of the best trips to the city in Ireland</span>
     </h5>
     <!-- <h1>Special Offers</h1> -->
     <!-- <br> -->
     <div class="row-tile">
         <div class="col-4 tile-img">
-        <img class="armagh" src="./Images/armagh.jpg" alt="armagh"> </div>  
+        <img class="waterford" src="./Images/Waterford.jpg" alt="waterford"> </div>  
         <div class="col-8 tile-body">
-            <h2>Armagh</h2>
+            <h2>Waterford</h2>
             <p> Stay: Armagh city hotel</p>
             <p>Price: £99 per night</p>
             <button type="button" class="btn btn-gradient">  Book now</button>
@@ -58,11 +58,11 @@
     <br>
     <div class="row-tile">
         <div class="col-4 tile-img">
-        <img class="galway" src="./Images/galway.jpg" alt="galway"></div>
+        <img class="portrush" src="./Images/portrush.jpg" alt="portrush"></div>
         <div class="col-8 tile-body">
-            <h2>Galway</h2>
-            <p> Stay: The Galmount Hotel and Spa</p>
-            <p>Price: £149 per night</p>
+            <h2>Portrush</h2>
+            <p> Stay: The Galgrom Hotel and Spa</p>
+            <p>Price: £249 per night</p>
             <button type="button" class="btn btn-gradient">  Book now</button>
         </div>
     </div>
@@ -70,10 +70,10 @@
     <br>
     <div class="row-tile">
         <div class="col-4 tile-img">
-        <img class="dublin" src="./Images/dublin.jpg" alt="dublin"></div>
+        <img class="limerick" src="./Images/Limerick.jpg" alt="limerick"></div>
         <div class="col-8 tile-body">
-            <h2>Dublin</h2>
-            <p> Stay: Dublin Skylon</p>
+            <h2>Limerick</h2>
+            <p> Stay: Limerick Skylon</p>
             <p>Price: £239 per night </p>
             <button type="button" class="btn btn-gradient">  Book now</button>
         </div>
