--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
         <div class="grid-item stay-styles">
           <img src="./Images/belfast.jpg" alt="" class="stay-image"
           <h5 class="stay-type">City Break</h5> 
-          <a href="#" class="btn btn-gradient">Learn More</a>
+          <a href="./citybreaks.html" class="btn btn-gradient">Learn More</a>
         </div>
         <div class="grid-item stay-styles">
           <img src="./Images/armagh.jpg" alt="" class="stay-image"
           <h5 class="stay-type">Outdoor Adventure</h5> 
-          <a href="#" class="btn btn-gradient">Learn More</a>
+          <a href="./outdoorAdventure.html" class="btn btn-gradient">Learn More</a>
         </div>
         <div class="grid-item stay-styles">
           <img src="./Images/dublin.jpg" alt="" class="stay-image"
           <h5 class="stay-type">Bit of Both</h5> 
-          <a href="#" class="btn btn-gradient">Learn More</a>
+          <a href="./bitofBoth.html" class="btn btn-gradient">Learn More</a>
         </div>
       </div>
     </div>
