--- a/outdoorAdventure.html
+++ b/outdoorAdventure.html
@@ -39,17 +39,17 @@
     <br/>
     <br/>
     <h5 class="section-head">
-      <span class="heading">City Breaks</span>
-      <span class="sub-heading">Some of the best trips to the city in Ireland</span>
+      <span class="heading">Outdoor Adventure</span>
+      <span class="sub-heading">Visit Irelands most spectacular scenes</span>
     </h5>
     <!-- <h1>Special Offers</h1> -->
     <!-- <br> -->
     <div class="row-tile">
         <div class="col-4 tile-img">
-        <img class="armagh" src="./Images/armagh.jpg" alt="armagh"> </div>  
+        <img class="donegal" src="./Images/Donegal.jpeg" alt="donegal" id="donegal"> </div>  
         <div class="col-8 tile-body">
-            <h2>Armagh</h2>
-            <p> Stay: Armagh city hotel</p>
+            <h2>Donegal</h2>
+            <p> Stay: Letterkenny city hotel</p>
             <p>Price: £99 per night</p>
             <button type="button" class="btn btn-gradient">  Book now</button>
         </div>
@@ -58,9 +58,9 @@
     <br>
     <div class="row-tile">
         <div class="col-4 tile-img">
-        <img class="galway" src="./Images/galway.jpg" alt="galway"></div>
+        <img class="cork" src="./Images/Cork.jpg" alt="galway"></div>
         <div class="col-8 tile-body">
-            <h2>Galway</h2>
+            <h2>Cork</h2>
             <p> Stay: The Galmount Hotel and Spa</p>
             <p>Price: £149 per night</p>
             <button type="button" class="btn btn-gradient">  Book now</button>
@@ -70,11 +70,11 @@
     <br>
     <div class="row-tile">
         <div class="col-4 tile-img">
-        <img class="dublin" src="./Images/dublin.jpg" alt="dublin"></div>
+        <img class="dublin" src="./Images/Cavan.jpg" alt="dublin"></div>
         <div class="col-8 tile-body">
-            <h2>Dublin</h2>
-            <p> Stay: Dublin Skylon</p>
-            <p>Price: £239 per night </p>
+            <h2>Cavan</h2>
+            <p> Stay: Cavan Lodge </p>
+            <p>Price: £139 per night </p>
             <button type="button" class="btn btn-gradient">  Book now</button>
         </div>
     </div>       
