--- a/Account.html
+++ b/Account.html
@@ -177,9 +177,10 @@
             <a href="indexTest.html" class="logo">
               <img class="logo-image" src="./images/Logo.png" alt="">
             </a> 
-            <div class="paragraph-footer"> 
-              test test test test test test test test test test test test
-            </div>
+            <div class="paragraph-footer">
+              Contact us:   
+              <div>Email: HoliStayie@gmail.com     Telephone: 02830123467 </div>
+             </div>
           </div>
           <div class="socialmedia-wrap">
             <h4 class="footer-heading">Follow us</h4>
