--- a/FindYourStay.html
+++ b/FindYourStay.html
@@ -98,8 +98,9 @@
               <img class="logo-image" src="./images/Logo.png" alt="" />
             </a>
             <div class="paragraph-footer">
-              test test test test test test test test test test test test
-            </div>
+              Contact us:   
+              <div>Email: HoliStayie@gmail.com     Telephone: 02830123467 </div>
+             </div>
           </div>
           <div class="socialmedia-wrap">
             <h4 class="footer-heading">Follow us</h4>
