added modal to featured stays, updated css of find your stay listings

--- a/citybreaks.html
+++ b/citybreaks.html
@@ -43,6 +43,14 @@
       <span class="sub-heading">Some of the best trips to the city in Ireland</span>
     </h5>
     <!-- <br> -->
+
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Congratulations! Your HoliStay has been booked!</p>
+      </div>
+    </div>
+
     <div class="row-tile">
         <div class="col-4 tile-img">
         <img class="armagh" src="./Images/armagh.jpg" alt="armagh"> </div>  
@@ -50,7 +58,13 @@
             <h2>Armagh</h2>
             <p> Stay: Armagh city hotel</p>
             <p>Price: £99 per night</p>
-            <button type="button" class="btn btn-gradient">  Book now</button>
+            <button type="button" class="btn btn-gradient" id="book1">  Book now</button>
+            <!-- <div id="myModal" class="modal">
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Congratulations! Your HoliStay has been booked!</p>
+              </div>
+            </div> -->
         </div>
     </div>
 
@@ -62,7 +76,7 @@
             <h2>Galway</h2>
             <p> Stay: The Galmount Hotel and Spa</p>
             <p>Price: £149 per night</p>
-            <button type="button" class="btn btn-gradient">  Book now</button>
+            <button type="button" class="btn btn-gradient" id="book">  Book now</button>
         </div>
     </div>
 
@@ -74,7 +88,7 @@
             <h2>Dublin</h2>
             <p> Stay: Dublin Skylon</p>
             <p>Price: £239 per night </p>
-            <button type="button" class="btn btn-gradient">  Book now</button>
+            <button type="button" class="btn btn-gradient" id="book">  Book now</button>
         </div>
     </div>       
     </div>
